--- a/components/site/app/views/layouts/site/bookmark_public.html.haml
+++ b/components/site/app/views/layouts/site/bookmark_public.html.haml
@@ -11,5 +11,5 @@
     = csrf_meta_tags
   %body{class: (controller.action_name == 'show') ? 'page-right-sidebar' : 'home page-fullwidth' }
     .site
-      = render 'layouts/site/public_header'
+      = render "layouts/site/templates/#{domain?}/desktop/header"
       = yield
