--- a/components/site/app/views/site/pages/index.html.haml
+++ b/components/site/app/views/site/pages/index.html.haml
@@ -33,7 +33,7 @@
                           - else
                             %img.attachment-property-thumb.featured-thumb-home{:alt => "", :src => "https://nwaqui.s3.amazonaws.com/uploads/c0f5d31336b1d3c5c450cefebd261156.jpg"}/
                           %span.property-category.new_name
-                            = special.property.address_name
+                            = "#{special.property.address_name} #{special.property.project_formated}"
                         .property-detail.mod-detail
                           .size
                             %span
