--- a/components/admin/app/views/admin/properties/index.html.haml
+++ b/components/admin/app/views/admin/properties/index.html.haml
@@ -26,8 +26,8 @@
       %table.table.table-striped.table-hover.table-bordered.table-condensed
         %thead 
           %tr
-            %th.col-md-1 Cod.
-            %th.col-md-1 Cliente
+            %th.col-sm-1 Cod.
+            %th.col-sm-1 Cliente
             %th Cidade/Região
             %th Endereço
             %th Situação
@@ -41,7 +41,7 @@
               %td.col-md-1= property.customer_id
               %td.col-md-1= property.address.name if property.address.present?
               %td.col-md-2= property.general_address
-              %td.col-md-1= property.situation.humanize
+              %td.col-md-2= property.situation.humanize
               %td.col-md-2= property.type_property.humanize
               %td.col-md-1= property.status ? "Sim" : "Não"
               %td.col-md-1
