--- a/components/site/app/views/layouts/site/templates/nwaqui/mobile/_header.html.haml
+++ b/components/site/app/views/layouts/site/templates/nwaqui/mobile/_header.html.haml
@@ -1,10 +1,10 @@
 %header
   .main-nav-wrap.container
     .row
-      .col-sm-1
-        = link_to image_tag('/images/logo/logo_full.png', size: '150x50'), site.root_path
-      .col-sm-6
-        .fav-buttons
+      .col-xs-6{style: 'margin-top: 10px; margin-bottom: 10px;'}
+        = link_to image_tag('/images/logo/logo_full.png', size: '130x50'), site.root_path
+      .col-xs-6
+        .fav-buttons{style: 'font-size: 10px'}
           - if bookmark_user.present?
             = link_to "<i class='glyphicon glyphicon-star'></i> Meus favoritos".html_safe, bookmarks_path, class: 'fav-button btn btn-primary'
           - else
