--- a/components/admin/app/views/layouts/admin/application.html.haml
+++ b/components/admin/app/views/layouts/admin/application.html.haml
@@ -4,6 +4,10 @@
   %title NwAqui :: Administração
   = stylesheet_link_tag    "admin/application", media: "all"
   = javascript_include_tag "admin/application", data: { 'turbolinks-eval' => false}
+  :javascript
+    tinyMCE.init({
+      selector: 'textarea.tinymce'
+    });
   = csrf_meta_tags
 %body#page-top
   = render 'layouts/admin/nav'
