--- a/components/site/app/assets/stylesheets/site/custom.css
+++ b/components/site/app/assets/stylesheets/site/custom.css
@@ -2,17 +2,21 @@
   font-weight: bold;
   font-size: 18px;
 }
+
+.gsearch-info-mobile {
+  padding: 10px 0 !important;
+}
 .gsearch-action-mobile input {
   margin-left: 16px;
   height: 40px;
-    width: 90px;
+  width: 90px;
 }
 .gsearch-wrap-mobile  {
-  padding-top: 20px;
-      border: 1px #CCCCCC solid;
+  padding-top: 30px;
+  border: 1px #CCCCCC solid;
 }
 .gsearch-mobile .form-control {
-  font-size: 8px;
+  font-size: 10px;
   height: 40px !important;
   background-color: #EFEFEF;
 }
