--- a/components/site/app/views/site/properties/_show_mobile.html.haml
+++ b/components/site/app/views/site/properties/_show_mobile.html.haml
@@ -178,18 +178,24 @@
         / START ARTICLE PROPERTY
         %article.property
           .row
-            .col-md-12
+            .col-md-12.col-xs-12
               .row
-                .col-md-12
-                  %h1.property-title
-                    %small
-                    = link_to "Voltar para listagem", :back, class: 'btn btn-primary'
+                .col-md-12.col-xs-12
+                  = link_to "Voltar para listagem", :back
+              %br/
               .row
-                .col-md-6{style: 'margin-top: 25px; font-size: 45px'}
+                .col-md-12.col-xs-12{style: 'margin-top: 25px; font-size: 45px'}
                   %div{class: "starfav_#{@property.id}"}= star_fav(@property.id)
-                
+
               .row
-                .col-md-6
+                .col-xs-1
+                  = whatsapp_button
+                .col-xs-3
+                  = facebook_button
+                .col-xs-2{style: 'padding-top: 4px'}
+                  = google_plus_button
+              .row
+                .col-md-12.col-xs-12
                   %small
                     %h4= " #{@property.address_name}"
                     %h5
@@ -219,7 +225,7 @@
                     .c
       
           .row
-            .col-xs-4
+            .col-xs-12
               .property-summary
                 .row
                   .col-xs-12
@@ -227,7 +233,8 @@
                       %b Descrição
                       %p
                         = @property.description
-            .col-xs-8
+          .row
+            .col-xs-12
               .property
                 .property-detail
                   %b Detalhes do Imóvel
